# Lang2SQL

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dev.sh  docker-compose.yml  guideline.md  pyproject.toml  quickstart.md  version.py
.github/workflows/: monitor-open-prs-and-analyze.yml  monitor-upstream-and-analyze.yml  monitor-upstream.yml
bench/: README.md  ecommerce_demo.py
cli/: README.md  __init__.py
cli/commands/: README.md  quary.py  run_streamlit.py
cli/core/: README.md  environment.py  streamlit_runner.py
cli/utils/: README.md  env_loader.py  logger.py
db_utils/: __init__.py  trino_connector.py
dev/: create_pgvector.py
docker/: .dockerignore  Dockerfile  docker-compose-pgvector.yml  docker-compose-postgres.yml  docker-compose.yml
docs/: ARCHITECTURE.md  BaseComponent_ko.md  BaseFlow_ko.md  Core_concept_ko.md  DEPLOY.md  Hook_and_exception_ko.md  MEASUREMENTS.md  PROJECT.md  RunContext_ko.md  discord_first_redesign.md  discord_first_redesign_v2.md  discord_first_redesign_v3_minimal.md  discord_first_redesign_v4.md  discord_first_redesign_v4_1.md  discord_first_redesign_v4_2.md  production_test_guide.md
docs/tutorials/: 01-quickstart.md  02-baseline.md  03-vector-search.md  04-hybrid.md  05-advanced.md  getting-started-without-datahub.md  v2-complete-tutorial.md  v2-usage-guide.md  vector-retriever.md  vector-store-backends.md
engine/: README.md  query_executor.py
infra/monitoring/: README.md
interface/: README.md  dialects.py  lang2sql.py  pages_config.py  streamlit_app.py
llm_utils/: README.md  chains.py
prompt/: document_suitability_prompt.md  query_maker_prompt.md  question_gate_prompt.md
scripts/: setup_sample_db.py  setup_sample_docs.py
src/lang2sql/: factory.py  (+1 more)
tests/: test_adapters.py  test_bench_demo.py  test_components_context_enricher.py  test_components_hybrid_retriever.py  test_components_keyword_retriever.py  test_components_loaders.py  test_components_question_gate.py  test_components_question_profiler.py  test_components_sql_executor.py  test_components_sql_generator.py  test_components_table_suitability.py  test_components_vector_retriever.py  test_core_base.py  test_core_context.py  test_core_exceptions.py  test_core_hooks.py  test_db_adapters.py  test_discord.py  test_edge_cases.py  test_flow_baseline_advanced.py  test_flows_baseline.py  test_flows_enriched_nl2sql.py  test_flows_nl2sql.py  test_harness_loop.py  test_ingestion.py  test_integration.py  test_integrations_embedding_azure.py  test_integrations_faiss_vectorstore.py  test_integrations_llm_azure.py  test_integrations_llm_ollama.py  test_integrations_pgvector_vectorstore.py  test_integrations_sqlalchemy_explorer.py  test_memory.py  test_persistence.py  test_prewarm.py  test_safety.py  test_semantic.py  test_setup_wizard.py  test_tenancy.py
(+245 files in other folders)
