[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "lang2sql"
version = "0.4.0.dev0"
description = "Lang2SQL — document-learning, read-only SQL analytics agent (v4.1 rebuild)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "brain-crew", email = "ryan@brain-crew.com" },
]
dependencies = [
  "discord.py>=2.3,<3.0",   # Phase 1 frontend transport
  "cryptography>=42.0",      # EncryptedSecrets at-rest encryption
  "sqlalchemy>=2.0",         # generic DB explorer (one adapter, many engines)
]

[project.optional-dependencies]
# DB driver extras. The SQLAlchemyExplorer is dialect-agnostic; install only the
# drivers you connect to. Cloudflare D1 needs no driver (HTTP API via stdlib).
postgres  = ["psycopg[binary]>=3.2,<4.0"]
bigquery  = ["sqlalchemy-bigquery>=1.11"]
snowflake = ["snowflake-sqlalchemy>=1.6"]
mysql     = ["pymysql>=1.1"]
duckdb    = ["duckdb-engine>=0.13"]
all-db    = [
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy-bigquery>=1.11",
  "snowflake-sqlalchemy>=1.6",
  "pymysql>=1.1",
  "duckdb-engine>=0.13",
]

[project.scripts]
lang2sql = "lang2sql.frontends.cli.app:main"
lang2sql-bot = "lang2sql.frontends.discord.bot:run"

[project.urls]
Homepage = "https://github.com/CausalInferenceLab/Lang2SQL"
Repository = "https://github.com/CausalInferenceLab/Lang2SQL"

[tool.hatch.build.targets.wheel]
packages = ["src/lang2sql"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
