[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "lang2sql"
version = "0.4.0.dev0"
description = "Lang2SQL — document-learning, read-only SQL analytics agent (v4.1 rebuild)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "brain-crew", email = "ryan@brain-crew.com" },
]
dependencies = [
  "discord.py>=2.3,<3.0",   # Phase 1 frontend transport
  "cryptography>=42.0",      # EncryptedSecrets at-rest encryption
]

[project.optional-dependencies]
# Real outbound adapters (V1 ships urllib OpenAI + stub PG; these enable v1.5 swaps)
postgres = ["psycopg[binary]>=3.2,<4.0"]

[project.scripts]
lang2sql = "lang2sql.frontends.cli.app:main"
lang2sql-bot = "lang2sql.frontends.discord.bot:run"

[project.urls]
Homepage = "https://github.com/CausalInferenceLab/Lang2SQL"
Repository = "https://github.com/CausalInferenceLab/Lang2SQL"

[tool.hatch.build.targets.wheel]
packages = ["src/lang2sql"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
